Made recipe tag modal non specefic so it works with all tags
